# r2t2

./: AUTHORS  Makefile  README  boot.bif  build_boot.sh  build_bsp.sh  build_bsp.tcl  build_dts.sh  build_dts.tcl  setenv_r2t2
adi_hdl/projects/adv7511/zed/: adv7511_zed.xpr  vivado.jou
doc/: manual.odt
fpga/: fft_wrapper_behav.wcfg  r2t2.xpr  testb_behav.wcfg  testb_behav1.wcfg  testb_behav2.wcfg  testb_behav3.wcfg
fpga/bd/: ps.bd
fpga/bd/hdl/: ps.hwdef  ps.vhd  ps_wrapper.vhd
fpga/config/: io_constrains.xdc
fpga/modules/: top.vhd
fpga/modules/cores/: axi_bram_reader.xpr  axi_bram_writer.xpr  axi_cfg_register.xpr  axi_sts_register.xpr  axis_bram_reader.xpr  axis_bram_writer.xpr  axis_constant.xpr  axis_counter.xpr  axis_gpio_reader.xpr  axis_histogram.xpr  axis_lfsr.xpr  axis_oscilloscope.xpr  axis_packetizer.xpr  axis_phase_generator.xpr  axis_pulse_height_analyzer.xpr  axis_ram_writer.xpr  axis_red_pitaya_adc.xpr  axis_red_pitaya_dac.xpr  axis_timer.xpr  axis_trigger.xpr  axis_validator.xpr  axis_variable.xpr
fpga/modules/cores/axi_bram_reader_v1_0/: component.xml
fpga/modules/cores/axi_bram_writer_v1_0/: component.xml
fpga/modules/cores/axi_cfg_register_v1_0/: component.xml
fpga/modules/r2t2/dac/: dac.vhdl  (+1 more)
fpga/modules/xilinx/: AXI_OCB_bridge_rtl.vhd  Radio_DAC_ebuffer_rtl.vhd  adc_ctrl_stat_rtl.vhd  adc_data_channel_ctrl_rtl.vhd  adc_data_channel_struct.vhdl  adc_dco_alignment_ctrl_rtl.vhd  adc_elastic_buffer_rtl.vhd  adc_fco_align_ctrl_rtl.vhd  adc_fco_alignment_struct.vhdl  adc_lvds_if_struct.vhdl  radio_dac_if_struct.vhdl  wdl_ps_wrapper.vhd.rlnk  wdl_spi_cfg_if_struct.vhdl  wdl_spi_ui_if_struct.vhdl  wdl_synth_struct.vhdl
fpga/project/: r2t2.xpr
fpga/src/: top.vhd
fpga/tb/rx/: rxtest.bd
freertos/trunk/src/: .gdbinit  .xmdrc  CMakeLists.txt  README  io.c  lscript.ld  zynq.cmake
freertos/trunk/src/bsp/: CMakeLists.txt
freertos/trunk/src/bsp/emacps_v2_2/src/: xemacps_g.c
freertos/trunk/src/bsp/include/: FreeRTOSConfig.h  xil_cache_vxworks.h  xparameters.h
freertos/trunk/src/bsp/scugic_v2_1/src/: xscugic.c  xscugic_hw.c
freertos/trunk/src/bsp/sdps_v2_3/src/: xsdps.c
freertos/trunk/src/bsp/standalone_v4_1/src/: xil-crt0.S
freertos/trunk/src/bsp/uartps_v2_2/src/: xuartps_g.c
freertos/trunk/src/debug/: bootstrap.sh
freertos/trunk/src/freertos/: CMakeLists.txt
freertos/trunk/src/r2t2/: CMakeLists.txt  FreeRTOS_tick_config.c  assert.h  control.cpp  control.h  main.c  r2t2.c  r2t2.h  r2t2_test.c  r2t2_test.h  remoteproc.c  remoteproc.h  remoteproc_kernel.h  utils.c  utils.h
freertos/trunk/src/release/: bootstrap.sh
fsbl/: build.sh  build.tcl
fsbl/patch/: TE0720-02.c  TE0720-02.h  adv7511.c  adv7511.h  fsbl_hooks.c  vdma.c  vdma.h
ghpsdr3-alex/: Makefile.am  confdefs.h  configure.ac  libtool
ghpsdr3-alex/trunk/src/r2t2/: Makefile.am  cleanup.sh  client.cpp  client.h  i2c.cpp  i2c.h  listener.cpp  r2t2.cpp  r2t2.h  r2t2defs.h  receiver.cpp  receiver.h  reg.cpp  reg.h  server.cpp  socket.cpp  spi.cpp  x
linux/trunk/linux-3.17/: build.sh  build_linux.sh
linux/trunk/linux-4.0-adi/: Makefile.r2t2  Module.symvers  boot.its  build_linux.sh  devicetree.dtb
output/: r2t2.bit  r2t2.hdf
scripts/: han.c  sbin_hotplug.sh  window.coe
soft/gr-r2t2/: AUTHORS  CMakeLists.txt
soft/gr-r2t2/docs/: README.r2t2
soft/gr-r2t2/grc/: CMakeLists.txt  r2t2_sink.xml  r2t2_source.xml
soft/gr-r2t2/lib/: CMakeLists.txt  qa_r2t2.cc  qa_r2t2.h  r2t2.pb.cc  r2t2.pb.h  r2t2.proto  sink_impl.cc  sink_impl.h  source_impl.cc  source_impl.h  test_r2t2.cc
soft/gr-r2t2/python/: CMakeLists.txt  __init__.py  qa_source_test.sh
soft/gr-r2t2/swig/: CMakeLists.txt  r2t2_swig.i
soft/r2t2/: CMakeLists.txt  Makefile  main.c  r2t2defs.h  reg.c  si5344_init.c  socket.c  socket.h  spi.c  spi.h
soft/r2t2client/: TCPSink.cpp  TCPSink.h  TCPSinkQtRadio.cpp  TCPSinkQtRadio.h  config.h  lib.cpp  lib.h  mainclient.cpp  r2t2.pb.cc  r2t2.pb.h  r2t2.proto  r2t2client.cpp  r2t2client.h  r2t2client.pro  r2t2clientconsole.cpp  r2t2clientconsole.h  r2t2clientdspqtradio.cpp  r2t2clientdspqtradio.h  r2t2clientqtradio.cpp  r2t2clientqtradio.h  r2t2clientstandard.cpp  r2t2clientstandard.h  r2t2gui.proto  r2t2qtradiolistener.cpp  r2t2qtradiolistener.h  r2t2radiolistener.cpp  r2t2radiolistener.h  types.h  watchdog.cpp  watchdog.h
soft/r2t2client/dsp/: AGC.cpp  AGC.h  AMDemod.cpp  AMDemod.h  FFT.cpp  FFT.h  FFTInterpol.cpp  FFTInterpol.h  FFT_real.cpp  FFT_real.h  FFTi_real.cpp  FFTi_real.h  FIRDecim.cpp  FIRDecim.h  FMDemod.cpp  FMDemod.h  G711Encode.cpp  G711Encode.h  NoiseFilter.cpp  NoiseFilter.h  Notch.cpp  Notch.h  Null.cpp  Null.h  ProcessBlock.cpp  ProcessBlock.h  ProcessBuffer.cpp  ProcessBuffer.h  RX.cpp  RX.h  Rotate.cpp  Rotate.h  SMeter.cpp  SMeter.h  SSBDemod.cpp  SSBDemod.h  Split.cpp  Split.h  TCPSink.cpp  TCPSink.h  (+6 more)
soft/r2t2gui/: analog.cpp  analog.h  audio.cpp  audio.h  audioQt.cpp  audioQt.h  audio_win32.cpp  audio_win32.h  build_android  clock.cpp  clock.h  conf.cpp  conf.h  config.h  control.cpp  control.h  display_base.cpp  display_base.h  display_lcd.cpp  display_lcd.h  display_touch.cpp  display_touch.h  display_touch.ui  fftGraph.cpp  fftGraph.h  filterGraph.cpp  filterGraph.h  g711.h  keyreader.cpp  keyreader.h  label.cpp  label.h  lib.cpp  lib.h  main.cpp  numeric.cpp  numeric.h  r2t2.conf  r2t2.pro  r2t2gui.pb.cc  (+16 more)
soft/r2t2gui/android/: AndroidManifest.xml
soft/r2t2srv/: config.h  i2c.cpp  lib.cpp  lib.h  mainsrv.cpp  r2t2.cpp  r2t2.h  r2t2.pb.cc  r2t2.pb.h  r2t2.proto  r2t2defs.h  r2t2srv.cpp  r2t2srv.h  r2t2srv.pro  si5344_init.cpp  si5344_init.h  socket.cpp  socket.h  spi.cpp
soft/scripts/: PKGBUILD  build_protbuf_android  r2t2.install  r2t2.py  r2t2_init
te/SC0720/: SC0720.vhd
te/axis_fb_conv_1.0/xgui/: axis_fb_conv_v1_0.tcl
te/video_io_to_hdmi/: video_io_to_hdmi.vhd
u-boot/: Makefile.autoinclude  System.map  attributes  build.sh
u-boot/include/: config.h  config.mk
u-boot/include/configs/: platform-auto.h  zynq_zc70x.h  zynq_zed.h
u-boot/scripts/basic/: fixdep
vivado_board_files/sc/SC0720/: SC0720.vhd  component.xml
(+390 files in other folders)
