add_library(bsp STATIC
	devcfg_v3_2/src/xdevcfg.c
	devcfg_v3_2/src/xdevcfg_g.c
	devcfg_v3_2/src/xdevcfg_hw.c
	devcfg_v3_2/src/xdevcfg_intr.c
	devcfg_v3_2/src/xdevcfg_selftest.c
	devcfg_v3_2/src/xdevcfg_sinit.c
	dmaps_v2_1/src/xdmaps.c
	dmaps_v2_1/src/xdmaps_g.c
	dmaps_v2_1/src/xdmaps_hw.c
	dmaps_v2_1/src/xdmaps_selftest.c
	dmaps_v2_1/src/xdmaps_sinit.c
	axidma_v8_0/src/xaxidma_bd.c
	axidma_v8_0/src/xaxidma_bdring.c
	axidma_v8_0/src/xaxidma.c
	axidma_v8_0/src/xaxidma_g.c
	axidma_v8_0/src/xaxidma_sinit.c
	gpio_v4_0/src/xgpio.c
	gpio_v4_0/src/xgpio_extra.c
	gpio_v4_0/src/xgpio_g.c
	gpio_v4_0/src/xgpio_intr.c
	gpio_v4_0/src/xgpio_selftest.c
	gpio_v4_0/src/xgpio_sinit.c
	gpiops_v2_2/src/xgpiops.c
	gpiops_v2_2/src/xgpiops_g.c
	gpiops_v2_2/src/xgpiops_hw.c
	gpiops_v2_2/src/xgpiops_intr.c
	gpiops_v2_2/src/xgpiops_selftest.c
	gpiops_v2_2/src/xgpiops_sinit.c
	iicps_v2_3/src/xiicps.c
	iicps_v2_3/src/xiicps_g.c
	iicps_v2_3/src/xiicps_hw.c
	iicps_v2_3/src/xiicps_intr.c
	iicps_v2_3/src/xiicps_master.c
	iicps_v2_3/src/xiicps_options.c
	iicps_v2_3/src/xiicps_selftest.c
	iicps_v2_3/src/xiicps_sinit.c
	iicps_v2_3/src/xiicps_slave.c
	qspips_v3_1/src/xqspips.c
	qspips_v3_1/src/xqspips_g.c
	qspips_v3_1/src/xqspips_hw.c
	qspips_v3_1/src/xqspips_options.c
	qspips_v3_1/src/xqspips_selftest.c
	qspips_v3_1/src/xqspips_sinit.c
	scugic_v2_1/src/xscugic.c
	scugic_v2_1/src/xscugic_g.c
	scugic_v2_1/src/xscugic_hw.c
	scugic_v2_1/src/xscugic_intr.c
	scugic_v2_1/src/xscugic_selftest.c
	scugic_v2_1/src/xscugic_sinit.c
	scutimer_v2_0/src/xscutimer.c
	scutimer_v2_0/src/xscutimer_g.c
	scutimer_v2_0/src/xscutimer_selftest.c
	scutimer_v2_0/src/xscutimer_sinit.c
	scuwdt_v2_0/src/xscuwdt.c
	scuwdt_v2_0/src/xscuwdt_g.c
	scuwdt_v2_0/src/xscuwdt_selftest.c
	scuwdt_v2_0/src/xscuwdt_sinit.c
	standalone_v4_1/src/_exit.c
	standalone_v4_1/src/_open.c
	standalone_v4_1/src/_sbrk.c
	standalone_v4_1/src/abort.c
	standalone_v4_1/src/asm_vectors.S
	standalone_v4_1/src/boot.S
	standalone_v4_1/src/close.c
	standalone_v4_1/src/cpu_init.S
	standalone_v4_1/src/errno.c
	standalone_v4_1/src/fcntl.c
	standalone_v4_1/src/fstat.c
	standalone_v4_1/src/getpid.c
	standalone_v4_1/src/isatty.c
	standalone_v4_1/src/kill.c
	standalone_v4_1/src/lseek.c
	standalone_v4_1/src/open.c
	standalone_v4_1/src/print.c
	standalone_v4_1/src/putnum.c
	standalone_v4_1/src/read.c
	standalone_v4_1/src/sbrk.c
	standalone_v4_1/src/sleep.c
	standalone_v4_1/src/smc.c
	standalone_v4_1/src/translation_table.s
	standalone_v4_1/src/uart.c
	standalone_v4_1/src/unlink.c
	standalone_v4_1/src/usleep.c
	standalone_v4_1/src/vectors.c
	standalone_v4_1/src/write.c
	standalone_v4_1/src/xil_assert.c
	standalone_v4_1/src/xil_cache.c
	standalone_v4_1/src/xil_exception.c
	standalone_v4_1/src/xil_io.c
	standalone_v4_1/src/xil_misc_psreset_api.c
	standalone_v4_1/src/xil_mmu.c
	standalone_v4_1/src/xil_printf.c
	standalone_v4_1/src/xil_testcache.c
	standalone_v4_1/src/xil_testio.c
	standalone_v4_1/src/xil_testmem.c
	standalone_v4_1/src/xl2cc_counter.c
	standalone_v4_1/src/xpm_counter.c
	standalone_v4_1/src/xtime_l.c
	standalone_v4_1/src/xil-crt0.S
	uartps_v2_2/src/xuartps.c
	uartps_v2_2/src/xuartps_g.c
	uartps_v2_2/src/xuartps_hw.c
	uartps_v2_2/src/xuartps_intr.c
	uartps_v2_2/src/xuartps_options.c
	uartps_v2_2/src/xuartps_selftest.c
	uartps_v2_2/src/xuartps_sinit.c
	xadcps_v2_1/src/xadcps.c
	xadcps_v2_1/src/xadcps_g.c
	xadcps_v2_1/src/xadcps_intr.c
	xadcps_v2_1/src/xadcps_selftest.c
	xadcps_v2_1/src/xadcps_sinit.c
)
