bin_PROGRAMS = r2t2-server

r2t2_server_CPPFLAGS	= -g -O3 -Wall @SIMD_FLAGS@

r2t2_server_SOURCES =	\
			r2t2.cpp	\
			listener.cpp\
			receiver.cpp\
			client.cpp	\
			server.cpp	\
			i2c.cpp  \
			reg.cpp \
			socket.cpp \
			spi.cpp \
			messages.h	\
			r2t2.h	\
			listener.h	\
			client.h	\
			receiver.h  \
			i2c.h  \
			reg.h \
			socket.h \
			spi.h


		
